@startuml
!include globals/stylesheets.iuml
skinparam linetype ortho

class RoundController {
    -roundService: RoundService
    +submitProposition(roundId: String, playerId: String, proposition: PropositionSubmissionDto)
}
class Game {
    id: String
}
class Proposition{
    -id: String
    -playerIds: List<String>
    -gaps: List<String>
}

class Round {
  -id: String
  -prompt: Prompt
  -propositions: List<Proposition>
  +addProposition(proposition: Proposition)
}
interface RoundService{
    -entityService: EntityService
    submitProposition(roundId: String, playerId: String, gaps: List<String>)
}
interface EntityService{
   -gameRepository: GameRepository
    isPlayerActiveInRound(roundId: String, playerId: String): boolean
    editRound(roundId: String, editor: RoundTransaction)
}
interface GameRepository {
    +findAll(): List<Game>
    +save(game: Game)
}

RoundController -> RoundService

RoundService "1"-->"*"  Game
RoundService "1"-->"*"  Player
RoundService "1"-->"*"  Proposition
RoundService "1"-->"1" EntityService

EntityService "1"-->"1" GameRepository

Game -> Round
@enduml